# saminfo

./: .gitignore  PROJECT_INSTRUCTIONS.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
AppIcons/: app_icon.icns
docs/: index.md
docs/api/: device.md  index.md
packaging/pyinstaller/: linux.spec  win32.spec
scripts/: dev-setup.ps1  dev-setup.sh
src/saminfo/: __main__.py  app.py
src/saminfo/device/: __init__.py  at_client.py  detector.py  device_command.py  errors.py
tests/: test_smoke.py
